tests/snapshots/examples_basics/lambda.snap
---
source: tests/examples_basics_snapshots.rs
---
Fixture: examples/basics/lambda.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Function parameter 2 type does not match: expected `Option<Int>`, found `Int`.

  --> examples/basics/lambda.flx:64:15
   |
64 | let tripled = myMap(nums, /x -> x * 3);
   |               ^^^^^^^^^^^^^^^^^^^^^^^^
   |               ------------------------ parameter 2: expected `Option<Int>`, found `Int`
== stdout ==
<not executed>
